assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');

:root {
    --color-primary: rgb(232, 227, 255);
}

html {
    height: 100%;
}

body {
    background: var(--color-primary);
    font-family: "Exo 2", Arial, Helvetica, sans-serif;
    font-size: 20px;
    margin: 0;
    min-height: 100%;
    display: flex;
    flex-direction: column;
}

@media screen and (max-width: 1024px) {
    body {
        font-size: 16px;
    }
}

@media screen and (max-width: 376px) {
    body {
        font-size: 14px;
    }
}

/* Main UI */

.btns {
    display: flex;
    justify-content: space-between;
}

.btn-container {
    display: flex;
    justify-content: flex-end;
}

.btn--reset {
    margin: 20px;
    display: block;
    font-family: "Exo 2", Arial, Helvetica, sans-serif;
    font-size: 1.2rem;
    cursor: pointer;
    color: red;
    border: red 0.125em solid;
    text-decoration: none;
    padding: 0.25em 1.25em;
    border-radius: 0.25em;
    background: var(--color-primary);
    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
    0 0 0.45em var(--color-primary);
    box-shadow: inset 0 0 0.25em 0 red, 0 0 0.25em 0 red;
    position: relative;
    transition: background-color 0.5s;
    width: 200px;
    height: 45px;
}

.btn--reset::after {
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    opacity: 0;
    box-shadow: 0 0 0.5em 0.25em red;
    transition: all 0.5s;
}

.btn--reset:hover, .btn--reset:focus {
    background: red;
    color: var(--color-primary);
    text-shadow: none;
}

.btn--reset:hover::after {
    opacity: 1;
}

/* Reset button pulse effect */

.btn--reset > span {
    position: absolute;
    background: red;
    transform: translate(-50%, -50%);
    pointer-events: none;
    border-radius: 50%;
    animation: animate 0.5s linear infinite;
}

@keyframes animate {
    0% {
        width: 0;
        height: 0;
        opacity: 0.5;
    }

    100% {
        width: 200px;
        height: 200px;
        opacity: 0;
    }
}

.btn--dark {
    margin: 20px;
    display: block;
    font-family: "Exo 2", Arial, Helvetica, sans-serif;
    font-size: 1.2rem;
    cursor: pointer;
    color: darkblue;
    border: darkblue 0.125em solid;
    text-decoration: none;
    padding: 0.25em 1.25em;
    border-radius: 0.25em;
    background: var(--color-primary);
    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
    0 0 0.45em var(--color-primary);
    box-shadow: inset 0 0 0.25em 0 darkblue, 0 0 0.25em 0 darkblue;
    position: relative;
    transition: background-color 0.5s;
    width: 200px;
    height: 45px;
}

.btn--dark::after {
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    opacity: 0;
    box-shadow: 0 0 0.5em 0.25em darkblue;
    transition: all 0.5s;
}

.btn--dark:hover, .btn--dark:focus {
    background: darkblue;
    color: var(--color-primary);
    text-shadow: none;
}

.btn--dark:hover::after {
    opacity: 1;
}

.sound-btn {
    margin: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.2rem;
    cursor: pointer;
    color: darkblue;
    border: darkblue 0.125em solid;
    text-decoration: none;
    padding: 1em 0.5em;
    border-radius: 20px;
    background: var(--color-primary);
    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
    0 0 0.3em darkblue;
    box-shadow: inset 0 0 0.25em 0 darkblue, 0 0 0.25em 0 darkblue;
    transition: background-color 0.5s;
    position: relative;
    width: 45px;
    height: 45px;
}

.sound-btn::after {
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    opacity: 0;
    border-radius: 20px;
    box-shadow: 0 0 0.25em 0.25em darkblue;
    transition: all 0.5s;
    pointer-events: none;
}

.sound-btn:hover, .sound-btn:focus {
    background: darkblue;
    color: var(--color-primary);
    text-shadow: none;
}

.sound-btn:hover::after {
    opacity: 1;
}

.sound-btn > i {
    font-size: 0.8rem;
}

h1 {
    text-align: center;
    font-size: 50px;
    margin-top: 0;
}

.selections {
    display: flex;
    justify-content: center;
}

.selection {
    background: none;
    outline: none;
    border: none;
    font-size: 100px;
    cursor: pointer;
    margin: 0 20px;
    opacity: 0.5;
    transition: all 0.3s;
}

.selection:hover {
    opacity: 1;
    transform: scale(1.15);
}

.scores {
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(2, 1fr);
    justify-items: center;
    align-items: center;
    font-size: 30px;
    margin-top: 30px;
}

.score {
    font-size: 150%;
    margin-left: 5px;
    color: rgb(1, 207, 1);
}

.loss {
    color: red;
}

.result {
    opacity: 0.3;
    font-size: 40px;
}

.result.winner {
    font-size: 60px;
    opacity: 1;
}

@media screen and (max-width: 1024px) {
    .btn--reset, .btn--dark {
        margin: 16px;
        font-size: 1rem;    
        padding: 0.2em 1em; 
        width: 160px;
        height: 35px;
    }

    .sound-btn {
        margin: 16px;
        font-size: 1rem;
        width: 35px;
        height: 35px;
    }

    h1 {
        font-size: 40px;
    }

    .selection {
        font-size: 80px;
        margin: 0 16px;
    }

    .scores {
        font-size: 24px;
        margin-top: 24px;
    }
}

@media screen and (max-width: 768px) {
    .btn--reset, .btn--dark {
        margin: 12px;
        padding: 0.2em 0.5em;
        font-size: 0.8rem;
        width: 100px;
        height: 30px;
    }

    .sound-btn {
        margin: 12px;
        font-size: 0.8rem;
        width: 30px;
        height: 30px;
    }

    h1 {
        font-size: 32px;
    }

    .selection {
        font-size: 45px;
        margin: 0;
    }
}

@media screen and (max-width: 428px) {
    .btns {
        flex-direction: column;
        align-items: center;
    }

    .btn--dark {
        margin: 8px;
    }

    .btn--reset {
        margin: 8px auto;
    }

    .btn-container {
        justify-content: center;
    }

    .sound-btn {
        margin: 8px;
    }

    h1 {
        font-size: 24px;
    }

    .selection {
        font-size: 36px;
    }

    .scores {
        font-size: 20px;
        margin-top: 20px;
    }

    .score {
        margin-left: 0;
    }
}

@media screen and (max-width: 376px) {
    .selection {
        font-size: 30px;
    }
}

@media screen and (max-width: 324px) {
    .scores {
        font-size: 16px;
        margin-top: 16px;
    }
}

/* Modals and modal content */

h2 {
    text-align: center;
    color: white;
    margin: 0;
}

.start-game-modal.open {
    background: darkblue;
    border: 4px solid var(--color-primary);
    border-radius: 20px;
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    left: 50%;
    padding: 20px;
    position: fixed;
    top: 50%;
    transform: translate(-50%, -50%);
    width: max-content;
    z-index: 1;
    max-height: 100vh;
    overflow-y: auto;
}

.start-game-modal {
    display: none;
}

.rules {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.rules-list {
    list-style: none;
    margin: 0;
    padding: 20px;
}

.icon {
    font-size: 150%;
}

.modal-image {
    width: 300px;
    display: inline-block;
    padding-left: 20px;
}

.start-game-modal.open p {
    font-style: italic;
    text-align: center;
    font-weight: bold;
    margin: 0;
}

.btn {
    margin: 40px auto 20px;
    display: block;
    font-family: "Exo 2", Arial, Helvetica, sans-serif;
    font-size: 1.2rem;
    cursor: pointer;
    color: var(--color-primary);
    border: var(--color-primary) 0.25em solid;
    text-decoration: none;
    padding: 0.25em 1.25em;
    border-radius: 0.25em;
    background: darkblue;
    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
    0 0 0.45em var(--color-primary);
    box-shadow: inset 0 0 0.5em 0 var(--color-primary), 0 0 0.5em 0 var(--color-primary);
    position: relative;
    transition: background-color 0.5s;
}

.btn::before {
    pointer-events: none;
    content: '';
    position: absolute;
    background: var(--color-primary);
    top: 120%;
    right: 0;
    width: 100%;
    height: 100%;
    transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
    filter: blur(1em);
    opacity: 0.7;
}

.btn::after {
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    opacity: 0;
    box-shadow: 0 0 2em 0.75em var(--color-primary);
    transition: all 0.5s;
}

.btn:hover, .btn:focus {
    background: var(--color-primary);
    color: darkblue;
    text-shadow: none;
}

.btn:hover::before,
.btn:focus::before {
    opacity: 1;
}

.btn:hover::after,
.btn:focus::before {
    opacity: 1;
}

/* Overlay */

.overlay.open {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    background-color: #000;
    display: block;
    opacity: 0.5;
}

.overlay {
    display: none;
}

.game-scores-modal {
    display: none;
    background: darkblue;
    border: 4px solid var(--color-primary);
    border-radius: 20px;
    color: white;
    left: 50%;
    padding: 40px;
    position: fixed;
    top: 50%;
    transform: translate(-50%, -50%);
    width: max-content;
    z-index: 1;
}

.game-scores-modal.open {
    display: block;
}

.game-scores {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
    font-size: 24px;
    margin-top: 20px;
}

.player-game-score {
    color: rgb(1, 207, 1);
}

.computer-game-score {
    color: red;
}

@media screen and (max-width: 1024px) {
    .start-game-modal.open {
        padding: 16px;
    }

    .modal-image {
        width: 200px;
        padding-left: 16px;
    }

    .btn {
        font-size: 1rem;
    }
}

@media screen and (max-width: 768px) {
    .rules {
        flex-direction: column;
        max-width: 360px;
    }

    .modal-image {
        padding-left: 0;
    }
}

@media screen and (max-width: 428px) {
    .start-game-modal.open {
        padding: 10px;
    }

    .start-game-modal.open p {
        max-width: 340px;
    }

    .rules {
        max-width: 300px;
    }

    .rules-list {
        padding: 10px;
    }

    .btn {
        font-size: 0.8rem;
        margin-top: 16px;
    }

    .game-scores {
        flex-direction: column;
        gap: 0;
    }
}

@media screen and (max-width: 376px) {
    .start-game-modal.open p {
        max-width: 280px;
    }

    .game-scores-modal {
        padding: 20px;
    }
}

@media screen and (max-width: 324px) {
    .start-game-modal.open p {
        max-width: 240px;
    }

    .rules {
        max-width: 240px;
    }

    .game-scores-modal {
        padding: 12px;
    }
}

/* Footer */

footer {
    border-top: 1px solid rgb(0, 255, 191);
    color: white;
    background: darkblue;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: auto;
    padding: 10px;
}

footer p {
    margin: 0;
    text-align: center;
}

.github-link i {
    width: max-content;
    border-radius: 10px;
    font-size: 20px;
    transition: all 0.5s;
    margin-left: 10px;
    color: white;
}

.github-link i:hover {
    transform: scale(1.2);
    color: var(--color-primary);
}

